--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <java-version>1.7</java-version>
         <jackson.version>2.3.3</jackson.version>
         <org.testng.version>4.11</org.testng.version>
-        <hibernate.version>3.3.2.GA</hibernate.version>
+        <hibernate.version>3.6.8.Final</hibernate.version>
         <slf4j.version>1.7.2</slf4j.version>
         <logback.version>1.0.9</logback.version>
         <spring.version>3.2.5.RELEASE</spring.version>
@@ -203,6 +203,11 @@
             <groupId>org.apache.xbean</groupId>
             <artifactId>xbean-spring</artifactId>
             <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>4.3.6.Final</version>
         </dependency>
         <!--<dependency>-->
             <!--<groupId>org.mockito</groupId>-->
