--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+*.war.original
+target/addresscrud-1.0-SNAPSHOT/*
